--- a/res/layout/listgroups.xml
+++ b/res/layout/listgroups.xml
@@ -14,6 +14,14 @@
     <TextView
         android:id="@+id/nbPlayers"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:gravity="center" />
+
+    <TextView
+        android:id="@+id/nbPoints"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:padding="10dp" />
 
 </LinearLayout>
