--- a/res/layout/scores_tab.xml
+++ b/res/layout/scores_tab.xml
@@ -10,6 +10,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="body1" />
+        android:text="HERE ARE THE SCORES" />
 
 </LinearLayout>
