--- a/res/layout/challenges_tab_item.xml
+++ b/res/layout/challenges_tab_item.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/tab2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
-    <ListView
-        android:id="@+id/listViewChallenges"
+    
+   <TextView
+        android:id="@+id/objective"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-       > 
-        
-    </ListView>
-        
+        android:padding="10dp"
+        android:textSize="16sp" />
+   
+   <TextView
+        android:id="@+id/points"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:textSize="16sp" />
 
 </LinearLayout>
