--- a/res/layout/scores_tab.xml
+++ b/res/layout/scores_tab.xml
@@ -5,11 +5,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
+    <ListView
+        android:id="@+id/listViewScores"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="HERE ARE THE SCORES" />
+        
+        >
+    </ListView>
 
 </LinearLayout>
