--- a/res/layout/listgroups.xml
+++ b/res/layout/listgroups.xml
@@ -12,10 +12,11 @@
         android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/nbPlayers"
+        android:id="@+id/bet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center" />
+        android:gravity="center" 
+        android:textSize="8sp" />
 
     <TextView
         android:id="@+id/nbPoints"
@@ -23,5 +24,7 @@
         android:layout_height="wrap_content"
         android:gravity="right"
         android:padding="10dp" />
+    
+
 
 </LinearLayout>
