--- a/res/layout/challenges_tab_item.xml
+++ b/res/layout/challenges_tab_item.xml
@@ -7,7 +7,8 @@
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true" />
 
     <TextView
         android:id="@+id/objective"
