--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,43 +1,49 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/blanc_casse"
     tools:context=".LoginActivity" >
 
     <!-- Login progress -->
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/login_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center_horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@color/blanc_casse"
         android:orientation="vertical"
         android:visibility="gone" >
 
         <ProgressBar
+            android:id="@+id/login_progress_bar"
             style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp" />
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="8dp"
+            android:background="@color/blanc_casse" />
 
         <TextView
             android:id="@+id/login_status_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/login_progress_bar"
+            android:layout_centerHorizontal="true"
             android:layout_marginBottom="16dp"
-            android:fontFamily="sans-serif-light"
             android:text="@string/login_progress_signing_in"
             android:textAppearance="?android:attr/textAppearanceMedium" />
-    </LinearLayout>
+    </RelativeLayout>
 
     <!-- Login form -->
 
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:background="@color/blanc_casse" >
 
         <LinearLayout
             style="@style/LoginFormContainer"
+            android:background="@color/blanc_casse"
             android:orientation="vertical" >
 
             <EditText
@@ -45,7 +51,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/prompt_email"
-                android:inputType="textEmailAddress"
                 android:maxLines="1"
                 android:singleLine="true" />
 
@@ -70,6 +75,12 @@
                 android:paddingLeft="32dp"
                 android:paddingRight="32dp"
                 android:text="@string/action_sign_in_register" />
+
+            <ImageView
+                android:id="@+id/imgLogo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/sms" />
         </LinearLayout>
     </ScrollView>
 
