--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity"
+    android:background="@color/blanc_casse" >
 
     <ListView
         android:id="@+id/listView1"
@@ -21,6 +22,13 @@
         android:layout_below="@id/listView1"
         android:layout_toRightOf="@id/button1"
         android:onClick="joinGroup" />
+    
+    <ImageView
+            android:id="@+id/imgAd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:src="@drawable/logo" />
     
    
     
