--- a/res/layout/challenges_tab.xml
+++ b/res/layout/challenges_tab.xml
@@ -3,7 +3,8 @@
     android:id="@+id/tab2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@color/blanc_casse" >
 
     <ListView
         android:id="@+id/listViewChallenges"
