--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
     
     <ImageView
             android:id="@+id/imgAd"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:src="@drawable/logo" />
