--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:text="@string/joinGroup"
         android:layout_below="@id/listView1"
         android:layout_toRightOf="@id/button1"
+        android:textSize="24sp"
         android:onClick="joinGroup" />
     
     <ImageView
